--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,7 @@
 {{!-- <h1>Static header.hbs file</h1> --}}
 <header>
     <h1>{{title}}</h1>
-    <a href="/">Home</a>
+    <a href="/">Weather</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
 </header>
