--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <div class="main-content">
         {{>header}}
     <img class="potrait"  src="/img/Screenshot from 2020-01-31 01-55-21.png" alt="Not Found">
+    <p>This website was created by Kunal Singal for basic nodejs understanding. It uses data from mapbox.com and darksky.net</p>
     </div>
     {{>footer}}
 </body>
